--- a/Tracker/Tracker.vcxproj.filters
+++ b/Tracker/Tracker.vcxproj.filters
@@ -33,6 +33,15 @@
     <ClInclude Include="Resource.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="Camera.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="cameraGuide.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="cameraSim.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Tracker.cpp">
@@ -42,6 +51,12 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="stdafx.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="cameraGuide.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="cameraSim.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
