--- a/Tracker/Tracker.vcxproj
+++ b/Tracker/Tracker.vcxproj
@@ -78,14 +78,16 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>$(VC_IncludePath);$(WindowsSDK_IncludePath);D:\Program_Files\Basler\pylon_5\Development\include;D:\Program_Files\Qt\opencv_3_3\opencv\build\include</IncludePath>
-    <LibraryPath>$(VC_LibraryPath_x64);$(WindowsSDK_LibraryPath_x64);$(NETFXKitsDir)Lib\um\x64;D:\Program_Files\Basler\pylon_5\Development\lib\x64;D:\Program_Files\Qt\opencv_3_3\opencv\build\x64\vc14\lib</LibraryPath>
+    <IncludePath>$(VC_IncludePath);$(WindowsSDK_IncludePath);D:\Program_Files\Basler\pylon_5\Development\include;D:\Program_Files\Qt\opencv_3_3\opencv\build\include;D:\Program_Files\SiliconSoftware\Runtime5.5.0\include;D:\Program_Files\SiliconSoftware\Runtime5.5.0\SDKExamples\include</IncludePath>
+    <LibraryPath>$(VC_LibraryPath_x64);$(WindowsSDK_LibraryPath_x64);$(NETFXKitsDir)Lib\um\x64;D:\Program_Files\Basler\pylon_5\Development\lib\x64;D:\Program_Files\Qt\opencv_3_3\opencv\build\x64\vc14\lib;D:\Program_Files\SiliconSoftware\Runtime5.5.0\lib\visualc</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
+    <IncludePath>$(VC_IncludePath);$(WindowsSDK_IncludePath);D:\Program_Files\Basler\pylon_5\Development\include;D:\Program_Files\Qt\opencv_3_3\opencv\build\include;D:\Program_Files\SiliconSoftware\Runtime5.5.0\include;D:\Program_Files\SiliconSoftware\Runtime5.5.0\SDKExamples\include</IncludePath>
+    <LibraryPath>$(VC_LibraryPath_x64);$(WindowsSDK_LibraryPath_x64);$(NETFXKitsDir)Lib\um\x64;D:\Program_Files\Basler\pylon_5\Development\lib\x64;D:\Program_Files\Qt\opencv_3_3\opencv\build\x64\vc14\lib;D:\Program_Files\SiliconSoftware\Runtime5.5.0\lib\visualc</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -117,7 +119,7 @@
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
-      <AdditionalDependencies>opencv_world330d.lib;opencv_world330.lib</AdditionalDependencies>
+      <AdditionalDependencies>opencv_world330d.lib;opencv_world330.lib;siso_auxport.lib;display_lib.lib;fglib5.lib;gbelib.lib;iolibrt.lib;siso_genicam.lib;siso_log.lib;</AdditionalDependencies>
     </Link>
     <Midl>
       <MkTypLibCompatible>false</MkTypLibCompatible>
@@ -168,6 +170,7 @@
       <SubSystem>Windows</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
+      <AdditionalDependencies>opencv_world330d.lib;opencv_world330.lib;siso_auxport.lib;display_lib.lib;fglib5.lib;gbelib.lib;iolibrt.lib;siso_genicam.lib;siso_log.lib;</AdditionalDependencies>
     </Link>
     <Midl>
       <MkTypLibCompatible>false</MkTypLibCompatible>
@@ -186,7 +189,9 @@
   <ItemGroup>
     <ClInclude Include="Camera.h" />
     <ClInclude Include="cameraGuide.h" />
+    <ClInclude Include="cameraImaging.h" />
     <ClInclude Include="cameraSim.h" />
+    <ClInclude Include="Record.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
@@ -195,7 +200,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="cameraGuide.cpp" />
+    <ClCompile Include="cameraImaging.cpp" />
     <ClCompile Include="cameraSim.cpp" />
+    <ClCompile Include="Record.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
