--- a/Tracker/Tracker.vcxproj.filters
+++ b/Tracker/Tracker.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClInclude Include="Record.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="com.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Tracker.cpp">
@@ -69,6 +72,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="Record.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="com.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
